<?xml version="1.0" encoding="utf-8"?>
<resources>

<string name="ok">Ok</string>
<string name="cancel">Cancel</string>
    
<string name="app_name">ZoobEditor</string>
<string name="btn_newlevel">New level</string>
<string name="xdim">Width</string>
<string name="ydim">Height</string>
<string name="lvlsize_dlg_title">Choose level size</string>
<string name="btn_wall">Wall</string>
<string name="btn_erase">Erase</string>
<string name="editor_wall_dlg_title">Choose wall type</string>
<string name="btn_tank">Tank</string>
<string name="btn_save">Done</string>
<string name="btn_help">Help</string>
<string name="btn_rename">Rename</string>
<string name="editor_tank_dlg_title">Choose tank type</string>
<string name="btn_undo">Undo</string>
<string name="btn_path">Path</string>
<string name="btn_path_reset">Reset</string>
<string name="btn_path_validate">Done</string>
<string name="dlg_serie_name_title">Serie name</string>
<string name="btn_play_level">Play level</string>
<string name="btn_lvl_advanced">Options</string>
<string name="btn_serie_advanced">Options</string>
<string name="btn_play_serie">Play serie</string>
<string name="menu_play_level">Play level</string>
<string name="menu_play_serie">Play serie</string>
<string name="btn_play_online_serie">Download and play</string>
<string name="btn_update">Update and play</string>
<string name="save_err_external">Error writing to the external directory</string>
<string name="save_err_export">Error during level export</string>
<string name="save_success">Saved succesfully </string>
<string name="myseries_tab">My levels</string>
<string name="online_tab">Community</string>
<string name="downloaded_tab">Downloaded</string>
<string name="menu_edit">Edit</string>
<string name="menu_upload">Upload</string>
<string name="menu_delete">Delete</string>
<string name="menu_preferences">Preferences</string>
<string name="btn_newserie">New levels serie</string>
<string name="delete_dlg_title">Confirm Delete</string>
<string name="confirm_delete_serie">Deleting a serie will completely erase it and there is no way to recover it. Are you sure you want to do that ?</string>
<string name="confirm_delete_level">Are you sure you want to delete that level ?</string>
<string name="no_account_found_title">No account found</string>
<string name="no_account_found">No account found to upload tracks to.</string>
<string name="choose_account_title">Choose Account</string>
<string name="progress_title">Please wait...</string>
<string name="btn_refresh">Refresh</string>
<string name="upload_error">Oops ! An error occured : </string>
<string name="upload_success">Level serie uploaded !</string>
<string name="rate_success">Level serie rated !</string>
<string name="delete_success">Level serie deleted !</string>
<string name="uploaded">Uploaded</string>
<string name="not_uploaded">Not uploaded</string>
<string name="downloaded">Downloaded</string>
<string name="not_downloaded">Not downloaded</string>
<string name="mine">Your serie</string>
<string name="modified">Modified</string>
<string name="update_available">Updated</string>
<string name="select_tool">Select tool</string>
<string name="err_already_rated">You have already this serie</string>
<string name="loading">Loading...</string>

<string name="help_title">Help</string>

<string name="explain_need_zoob">
This application allows you to create and share level for a game called "Zoob". \n 
Therefore, you need to have this game installed before you can use this level editor. \n
Would you like to download "Zoob" now ?</string>
<string name="explain_need_zoob_title">Another application is required</string>
<string name="dlg_rate_title">Rate this serie</string>

<string name="my_rating">My rating</string>
<string name="serie_preview">Serie preview</string>

<string name="dlg_no_account_title">Google account required</string>
<string name="dlg_no_account_msg">This functionnality requires that you define a Google account to use with this application. Please do so in the preferences.</string>
<string name="goto_prefs">Open preferences</string>

<string name="dlg_access_request_title">Authorization required</string>
<string name="dlg_access_request_msg">Watch the notification area. There should be an Access Request for ZoobEditor to use your Google account. You need to allow it to continue</string>

<string name="item_whole_serie">All levels</string>
<string name="author">Author</string>
<string name="num_levels">Levels</string>
<string name="serie_infos">General informations</string>
<string name="no_progress">Not started yet</string>
<string name="your_progress">Your progress</string>

<!--  Level Options -->
<string name="level_pref_general">General</string>
<string name="level_pref_title_shadows">Shadows</string>
<string name="level_pref_summary_shadows">Toggle the use of the shadows effect on the level</string>
<string name="level_pref_title_boss">Boss</string>
<string name="level_pref_summary_boss">Toggle the use of the boss intro (displaying the ??)</string>

<string name="level_pref_items">Available items</string>
<string name="level_pref_items_summary">You can choose which items the player will be allowed to use in this level</string>

<string name="level_pref_title_bombs">Bombs</string>
<string name="level_pref_title_shield">Shield</string>
<string name="level_pref_title_bounce">Bounce tank</string>
<string name="level_pref_title_improved_firing">Improved firing</string>
<string name="level_pref_summary_improved_firing">This is a passive bonus to firing rate and rockets speed</string>

<!--  Serie Options -->
<string name="serie_pref_items">Available items</string>
<string name="serie_pref_items_summary">You can choose when the items will become available for the player.
You can also fine-tune this choice on a per-level basis. 
WARNING: if you have already set per-level settings for that, they will be overriden !</string>

<string name="serie_pref_title_bombs">Bombs</string>
<string name="serie_pref_title_shield">Shield</string>
<string name="serie_pref_title_bounce">Bounce</string>
<string name="serie_pref_title_improved_firing">Improved firing</string>
<string name="serie_pref_summary_improved_firing">This is a passive bonus to firing rate and rockets speed</string>


<!-- Preferences -->
<string name="account_preferences">Account</string>
<string name="title_account_preference">Account</string>
<string name="summary_account_preference">The account used to upload and share levels.</string>
<string name="dialog_title_account_preference">Choose account</string>
<string name="no_account_defined_summary">No Google account found on this phone. Please set up one in your phone\'s parameters.</string>

<!--  Pref keys ( DO NOT TRANSLATE ) -->
<string name="pref_key_account">account</string>

</resources>
