<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory
    android:title="@string/serie_pref_items">
   <Preference
      android:persistent="false"
      android:enabled="false"
      android:selectable="false"
      android:summary="@string/serie_pref_items_summary" />
   <ListPreference
        android:key="bombs"
        android:title="@string/serie_pref_title_bombs"
        android:persistent="false" />
   <ListPreference
        android:key="shield"
        android:title="@string/serie_pref_title_shield"
        android:persistent="false" />
   <ListPreference
        android:key="bounce"
        android:title="@string/serie_pref_title_bounce"
        android:persistent="false" />
   <ListPreference
        android:key="improved_firing"
        android:title="@string/serie_pref_title_improved_firing"
        android:summary="@string/serie_pref_summary_improved_firing"
        android:persistent="false" />
  </PreferenceCategory>
</PreferenceScreen>