<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="fill_parent"
  android:orientation="vertical">
    <Button android:id="@+id/btn_wall"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/btn_wall" />
    <Button android:id="@+id/btn_erase"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/btn_erase" />
    <Button android:id="@+id/btn_tank"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/btn_tank" />
    <Button android:id="@+id/btn_path"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/btn_path" />
    <Button android:id="@+id/btn_undo"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/btn_undo" />
</LinearLayout>
